--- a/boston_housing/boston_housing.ipynb
+++ b/boston_housing/boston_housing.ipynb
@@ -246,7 +246,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** 0.923"
+    "**Answer:** 0.923\n",
+    "\n",
+    "Looking at the R^2 score, we can say that the model has captured the variation of target variable very well. In fact, the predicted values are very close to the actual values. Though the model can still be improved, the current model does a good job in the initial phase of prediction."
    ]
   },
   {
@@ -456,7 +458,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** Grid search feature in sklearn helps in optimising the model parameters automatically. It tries out various combinations of the parameter values while building the model to see which are the best parameter values. It helps us save the trial and error time we spend on trying and tuning our model with the parameters manually. We can use it obtain the best possible values for the params needed for building the model. For example : in decision tree model, the grid search can help us determine the optimum max depth of the model."
+    "**Answer: ** Grid search feature in sklearn helps in optimising the model parameters automatically. It tries out various combinations of the parameter values while building the model to see which are the best parameter values. It helps us save the trial and error time we spend on trying and tuning our model with the parameters manually. We can use it obtain the best possible values for the params needed for building the model. For example : in decision tree model, the grid search can help us determine the optimum max depth of the model.\n",
+    "\n",
+    "Grid search finds the optimised hyper-parameters by exhaustively trying out all the possible combinations of the param values. It manualy tries all the possible values from the specified subset of the parameter space of a learning algorithm specified with the param_grid parameter. The various combinations are the candidates from the grid of parameter values specified with the param_grid parameter."
    ]
   },
   {
@@ -472,7 +476,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** K-fold cross-validation technique helps us train the model in a much better way. Without k-fold , we would split the data into a single training set  and  a single test set. We would train the model on train data and find its performance on the test data. But with k-fold, we get to divide training data into further multiple(k) sets of data. Within these k sets of data, we use k-1 sets as training and the remaining 1 set as test data to train the model. Every set gets to be test data at some point of the model building. This ensures we use the data efficiently to train the model.\n",
+    "**Answer: ** K-fold cross-validation technique helps us train the model in a much better way. Without k-fold , we would split the data into a single training set  and  a single test set. We would train the model on train data and find its performance on the test data. But with k-fold, we get to divide training data into further multiple(k) sets of data. Within these k sets of data, we use k-1 sets as training and the remaining 1 set as test data to train the model. Every set gets to be test data at some point of the model building. This ensures we use the data efficiently to train the model. At the end, the error rates of all k times are averaged to give the final cross-validation score. The advantage of this is that we don't have to worry about the distribution of test and train data. Also it gives a better estimate on how the model might perform on the real world new data set.\n",
     "\n",
     "This technique helps in grid search to experiment the various model parameter values on multiple data (k-1) sets,multiple times to see which fits the model best and test it on multiple data sets. Without cross validated set, grid search could give the parameter values which fits only one particular data set perfectly, whereas it might not be the best values for a new given data set."
    ]
@@ -525,7 +529,7 @@
     "    regressor = DecisionTreeRegressor()\n",
     "\n",
     "    # TODO: Create a dictionary for the parameter 'max_depth' with a range from 1 to 10\n",
-    "    params = {'max_depth':range(1,10)}\n",
+    "    params = {'max_depth':range(1,11)}\n",
     "\n",
     "    # TODO: Transform 'performance_metric' into a scoring function using 'make_scorer' \n",
     "    scoring_fnc = make_scorer(performance_metric)\n",
